--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.14.0" />
     <PackageReference Include="Quartz" Version="3.1.0" />
   </ItemGroup>
 
