--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -7,6 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.14.0" />
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
     <PackageReference Include="Quartz" Version="3.1.0" />
   </ItemGroup>
 
